fix ui bug causing textarea to be too narrow

--- a/client-app/style.css
+++ b/client-app/style.css
@@ -145,7 +145,9 @@ section.form {border:1px solid #aaa;padding:5px;margin:5px 0 5px 0;}
  */
 div.text-input {text-align:left;margin:5px;padding:0;}
 span.text-input-label {display:block;font-size:0.9em;text-align:left;}
-input.text {display:inline-block;border-sizing:border-box;width:90%;}
+input.text {
+	width:95%;
+}
 .success > .feedback {color:#88aa33;}
 .success > .feedback:before {content:"✓";margin-left:5px;font-size:1.5em;line-height:1px;}
 .error > .feedback {color:#aa5533;}
@@ -153,18 +155,9 @@ input.text {display:inline-block;border-sizing:border-box;width:90%;}
 /*
  * text area
  */
-div.textarea {
-	position:relative;
-	height:24em;
-}
 textarea.textarea {
-	position:absolute;
-	top:0px;
-	left:0px;
-	right:0px;
-	bottom:0px;
-	padding:5px;
-	resize:none;
+	min-width:95%;
+	min-height:24em;
 }
 
 
